# hi-climate-backend

./: Dockerfile  Readme.md  hcdp_API.txt  pyproject.toml
app/: .env.example  hcdp.py  main.py
